--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
+    "dayjs": "^1.11.5",
     "luxon": "^2.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
